Data Passing in Fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="utilities">Utilities</string>
     <string name="contacts">Contacts</string>
     <string name="profile">Profile</string>
+
+    <string name="OpenDrawer">Open navigation Drawer</string>
+    <string name="CloseDrawer">Close navigation Drawer</string>
 </resources>
