--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,10 @@
 
     <string name="OpenDrawer">Open navigation Drawer</string>
     <string name="CloseDrawer">Close navigation Drawer</string>
+    <string name="title_activity_maps">MapsActivity</string>
+    <string name="normal_map">Normal Map</string>
+    <string name="hybrid_map">Hybrid Map</string>
+    <string name="satellite_map">Satellite Map</string>
+    <string name="terrain_map">Terrain Map</string>
+    <string name="none_map">None Map</string>
 </resources>
